# graphics

./: .gitignore  Box.cpp  Box.h  CLI.cpp  CLI.h  CMakeLists.txt  Camera.cpp  Camera.h  ClearCommand.cpp  ColorCommand.cpp  ColorCommand.h  Command.cpp  Command.h  DrawCommand.cpp  DrawCommand.h  Filter.cpp  Filter.h  Light.h  LookatCommand.cpp  LookatCommand.h  Makefile  Matrix44.cpp  Matrix44.h  MoveCommand.cpp  MoveCommand.h  OrthoCamera.cpp  OrthoCamera.h  OrthoCommand.cpp  OrthoCommand.h  PerspCamera.h  PerspectiveCommand.cpp  PopCommand.cpp  PopCommand.h  README.md  README.txt  Ray.cpp  Ray.h  ReadCommand.cpp  ReadCommand.h  ResetCommand.cpp  (+37 more)
images/: eeyore2xcircular.tif  eeyore2xfreeze.tif  lenna-box.tif  lenna-bsplcubic.tif  lenna-catmullrom.tif  lenna-gaussian.tif  lenna-hamming.tif  lenna-lanczos.tif  lenna-mitchell.tif  lenna-tent.tif  lenna.tif  reflect.tiff  slenna-box.tif  slenna-bsplcubic.tif  slenna-catmullrom.tif  slenna-gaussian.tif  slenna-hamming.tif  slenna-lanczos.tif  slenna-mitchell.tif  slenna-negative.tif  slenna-tent.tif  slenna-width100.tif  slenna.tif  testing.tif
scripts/: basic.cli  custom.cli  eeyoretest.cli  p4test.cli  playtest.cli  poohtest.cli  recursive1.cli  recursive2.cli  reflect.cli  tifftest.cli
scripts/project4/: cube.cli  junk.cli  orient2.cli  orient3.cli  ortho.cli  persp.cli  rot.cli  z.cli
src/: Box.cpp  Box.h  CLI.cpp  ClearCommand.cpp  ClearCommand.h  ColorCommand.h  DrawCommand.cpp  Filter.cpp  Light.cpp  Makefile  Matrix44.cpp  MoveCommand.h  PerspCamera.cpp  PerspectiveCommand.h  PushCommand.cpp  PushCommand.h  ReadCommand.h  ResizeCommand.cpp  ScreenCommand.cpp  Shape.h  Sphere.h  TiffImageData.cpp  TiffReadCommand.cpp  TiffStatCommand.cpp  TiffStatCommand.h  TiffWriteCommand.cpp  TraceCommand.cpp  Triangle.cpp  Triangle.h  Utilities.cpp  Utilities.h  Vector4.cpp  global.h  lines.cpp  main  main.cpp
